split API ref from docs; edited installation docs;replacing snippets and screenshots

--- a/openapi/ProducerApi.yaml
+++ b/openapi/ProducerApi.yaml
@@ -8,8 +8,8 @@ info:
     url: https://opensource.org/licenses/MIT
   contact:
     url: https://wire.network
-tags:
-- name: sysio
+# tags:
+# - name: sysio
 servers:
 - url: "{protocol}://{host}:{port}/v1/"
   variables:
