Bunch of swizzled components. Added tailwind and wire tailwind config with colors, sizing, etc. Updated footer and header and mobile navbar to be on brand with colors. Matched doc theme border colors to not look funky.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,10 @@
   "extends": "@docusaurus/tsconfig",
   "compilerOptions": {
     "baseUrl": ".",
-    "outDir": "dist"
+    "outDir": "dist",
+    "paths": {
+      "@theme/*": ["src/theme/*"],
+      "@site/*": ["./*"]
+    }
   }
 }
