--- a/.prettierrc
+++ b/.prettierrc
@@ -1,11 +1,12 @@
 {
-    "arrowParens": "avoid",
-    "bracketSpacing": true,
-    "bracketSameLine": true,
-    "printWidth": 80,
-    "proseWrap": "never",
-    "singleQuote": false,
-    "trailingComma": "es5",
-    "semi": true,
-    "tabWidth": 2
+  "arrowParens": "avoid",
+  "bracketSpacing": true,
+  "bracketSameLine": true,
+  "printWidth": 80,
+  "proseWrap": "never",
+  "singleQuote": false,
+  "trailingComma": "es5",
+  "semi": true,
+  "tabWidth": 2,
+  "plugins": ["prettier-plugin-tailwindcss"]
 }
