--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/container-queries": "^0.1.1",
     "clsx": "^2.0.0",
+    "lucide-react": "^0.451.0",
     "prism-react-renderer": "^2.3.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
