added more prerequisites to places, reorganized content,wire hub section, getting started changes + diagram,network info

--- a/.github/workflows/deploy-workflow.yaml
+++ b/.github/workflows/deploy-workflow.yaml
@@ -45,3 +45,20 @@ jobs:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v2
+
+      - name: Send Notification to Mattermost
+        env:
+          WEBHOOK_URL: ${{ secrets.WEBHOOK_URL }}
+          REPO_NAME: ${{ github.repository }}
+        run: |
+          MESSAGE="**$REPO_NAME** updated on `master`"
+          CHANNEL="#cicd-notifications"
+          ICON_URL="https://static-00.iconduck.com/assets.00/document-icon-256x256-ojn5ong2.png"
+
+          curl -X POST -H 'Content-Type: application/json' \
+            --data "$(jq -n \
+              --arg text "$MESSAGE" \
+              --arg channel "$CHANNEL" \
+              --arg icon_url "$ICON_URL" \
+              '{channel: $channel, icon_url: $icon_url, text: $text}')" \
+            "$WEBHOOK_URL"
