--- a/.github/workflows/deploy-workflow.yaml
+++ b/.github/workflows/deploy-workflow.yaml
@@ -51,7 +51,7 @@ jobs:
           WEBHOOK_URL: ${{ secrets.WEBHOOK_URL }}
           REPO_NAME: ${{ github.repository }}
         run: |
-          MESSAGE="**$REPO_NAME** updated on `master`"
+          MESSAGE="**$REPO_NAME** updated on *master*"
           CHANNEL="#cicd-notifications"
           ICON_URL="https://static-00.iconduck.com/assets.00/document-icon-256x256-ojn5ong2.png"
 
