--- a/openapi/old/ProducerApi.yaml
+++ b/openapi/old/ProducerApi.yaml
@@ -10,7 +10,7 @@ info:
     url: https://wire.network
 tags:
   - name: Protocol Version 4.0
-    description: The release tag for Leap binaries is also the protocol version
+    description: The release tag for Wire Sysio binaries is also the protocol version
 servers:
   - url: "{protocol}://{host}:{port}/v1"
     variables:
