--- a/package.json
+++ b/package.json
@@ -40,7 +40,9 @@
     "prism-react-renderer": "^2.3.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "redocusaurus": "^2.0.2"
+    "redocusaurus": "^2.0.2",
+    "rehype-katex": "^7.0.1",
+    "remark-math": "^6.0.0"
   },
   "devDependencies": {
     "@docusaurus/eslint-plugin": "^3.7.0",
